--- a/pstyle.css
+++ b/pstyle.css
@@ -49,6 +49,7 @@ ul{
     list-style: none;
 }
 
+
 .cafe2{
     height: 35vh;
     width: 40vw;
@@ -57,14 +58,27 @@ ul{
     border:2px solid black;
 }
 
-.lista{
-    height: 72vh;
-    width: 40vw;
-    background-color: rgb(255, 250, 149);
-    margin:2px black double ;
-    padding:2px;
-    font-family: monospace;
+h1{
+    font-family: 'Dancing Script', cursive;
 }
+
+
+section{
+    height: 150vh;
+    width: auto;
+    display: grid;
+    grid-row: span;
+    grid-template-areas: "lista container"
+    "container2 lista2";
+}
+
+.lista{
+    height: 70vh;
+    width: 40vw;
+    border: 5px black double;
+    background-color: rgb(255, 250, 149);
+    padding:2px;
+    font-family: 'Dancing Script', cursive;}
 
 .foto1{
     width: 10vw;
@@ -92,15 +106,58 @@ ul{
     border-radius: 50%;
     margin: auto;
 }
+.list1{
+    border: 5px black double;
+   margin:2px black solid;
+    background-color: rgb(255, 250, 149);
+    padding:4px;
+    font-family: 'Dancing Script', cursive;}
+
+.foto4{
+    width: 10vw;
+    height: 20vh;
+    background-image: url(./mini-torta-red-velvet-2.jpg);
+    background-size: cover;
+    border-radius: 50%;
+    margin: auto;
+}
+
+.foto5{
+    width: 10vw;
+    height: 20vh;
+    background-image: url(./frosting-choco.webp);
+    background-size: cover;
+    border-radius: 50%;
+    margin: auto;
+}
+
+.foto6{
+    width: 10vw;
+    height: 20vh;
+    background-image: url(./brusquetta.webp);
+    background-size: cover;
+    border-radius: 50%;
+    margin: auto;
+}
 
 .container{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-area:inherit;
+}
+
+.container2{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-area:inherit;
 }
 
 footer{
     width: 100%;
     height: 18vh;
+    padding: 4px;
     background-color: rgb(39, 245, 245);
     display: flex;
     flex-direction: column;
@@ -114,7 +171,8 @@ footer{
 }
 
 .links{
-    display: flex;
+    display:flex;
     flex-direction: row;
     justify-content: center;
+    gap: 20px;
 }
